fully ready but no logout button on the main page yet.

--- a/Signup.html
+++ b/Signup.html
@@ -1,36 +1,60 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sign up</title>
-    <link rel="stylesheet" href="Signup.css">
-</head>
-<body>
-    <div class="signup-box">
-        <h1>Sign Up</h1>
-        <h4>Create your account</h4>
-        <form>
-            <label>First Name</label>
-            <input type="text" placeholder="Enter your first name" required>
-            <label>Last Name</label>
-            <input type="text" placeholder="Enter your last name" required>
-            <label>Email</label>
-            <input type="email" placeholder="Enter your email" required>
-            <label>Password</label>
-            <input type="password" placeholder="Create a password" required>
-            <label>Confirm Password</label>
-            <input type="password" placeholder="Confirm your password" required>
-            <input type="submit" value="Sign Up">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Sign Up - Welcome</title>
+    <link
+      href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="Signup.css" />
+  </head>
+  <body>
+    <main class="wrapper">
+      <div class="auth-card">
+        <header class="form-header">
+          <h1>Create an account</h1>
+          <p>Welcome! Please enter your details.</p>
+        </header>
+
+        <form class="signup-form" novalidate>
+          <div class="input-group">
+            <label for="name">Name</label>
+            <input type="text" id="name" placeholder="Enter your name" />
+          </div>
+
+          <div class="input-group">
+            <label for="email">Email</label>
+            <input type="email" id="email" placeholder="Enter your email" />
+          </div>
+
+          <div class="input-group">
+            <label for="password">Password</label>
+            <input type="password" id="password" placeholder="Password" />
+          </div>
+
+          <button type="submit" class="btn-primary">Sign up</button>
+
+          <button type="button" class="btn-google">
+            <i class="bx bxl-google"></i>
+            Sign up with Google
+          </button>
         </form>
-        <p>By clicking the Sign Up button, you agree to our <br>
-            <a href="#">Terms and Conditions</a> and <a href="#">Privacy Policy</a>
-            <a href="index.html">continue as guest</a>
-        </p>
-        <p class="para-2">
-            Already have an account? <a href="login.html">Login here</a>
-             <a href="index.html">continue as guest</a>
-        </p>
-    </div>
-</body>
+
+        <footer class="form-footer">
+          <p>Already have an account? <a href="login.html">Log in</a></p>
+        </footer>
+      </div>
+    </main>
+    <script>
+      document
+        .querySelector(".signup-form")
+        .addEventListener("submit", function (event) {
+          // For testing, just redirect to main page
+          window.location.href = "index.html";
+          event.preventDefault();
+        });
+    </script>
+  </body>
 </html>
