--- a/contact.html
+++ b/contact.html
@@ -7,7 +7,10 @@
     <!-- Link to your external CSS file -->
     <link rel="stylesheet" href="contact.css" />
     <!-- Optional: Link to Google Fonts for 'Inter' if not locally available -->
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <div class="Header">
@@ -23,18 +26,18 @@
         <h1>CONTACT US</h1>
         <form>
           <p>Full Name</p>
-          <input type="text" placeholder="Enter your name">
+          <input type="text" placeholder="Enter your name" />
 
           <p>Gmail</p>
-          <input type="email" placeholder="email">
+          <input type="email" placeholder="email" />
 
           <p>Phone Number</p>
-          <input type="tel" placeholder="mobile no">
+          <input type="tel" placeholder="mobile no" />
 
           <p>Message</p>
           <!-- Changed input type="text" to textarea for better message input -->
           <textarea placeholder="Your message here..." rows="5"></textarea>
-          <input type="submit" value="Submit">
+          <input type="submit" value="Submit" />
         </form>
       </div>
     </div>
@@ -42,21 +45,69 @@
     <footer>
       <div class="footer-container">
         <div class="footer-social">
-          <a href="#"><i class='bx bxl-gmail' aria-label="Gmail"></i></a>
-          <a href="#"><i class='bx bx-phone' aria-label="Phone"></i></a>
-          <a href="#"><i class='bx bxl-whatsapp' aria-label="WhatsApp"></i></a>
-          <a href="#"><i class='bx bxl-linkedin' aria-label="LinkedIn"></i></a>
-          <a href="#"><i class='bx bxl-github' aria-label="GitHub"></i></a>
+          <a href="#"><i class="bx bxl-gmail" aria-label="Gmail"></i></a>
+          <a href="#"><i class="bx bx-phone" aria-label="Phone"></i></a>
+          <a href="#"><i class="bx bxl-whatsapp" aria-label="WhatsApp"></i></a>
+          <a href="#"><i class="bx bxl-linkedin" aria-label="LinkedIn"></i></a>
+          <a href="#"><i class="bx bxl-github" aria-label="GitHub"></i></a>
         </div>
         <div class="footer-links">
           <a href="index.html">Home</a>
           <a href="#">About</a>
           <a href="contact.html">Contact Us</a>
         </div>
-        <p class="footer-copyright">&copy; 2025 OnyXLuxe. All rights reserved.</p>
+        <p class="footer-copyright">
+          &copy; 2025 OnyXLuxe. All rights reserved.
+        </p>
       </div>
     </footer>
     <!-- Add Boxicons CDN if not already present -->
-    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+    <link
+      href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
+      rel="stylesheet"
+    />
+    <script>
+      document
+        .querySelector("form")
+        .addEventListener("submit", function (event) {
+          const fullName = document
+            .querySelector('input[placeholder="Enter your name"]')
+            .value.trim();
+          const email = document
+            .querySelector('input[type="email"]')
+            .value.trim();
+          const phone = document
+            .querySelector('input[type="tel"]')
+            .value.trim();
+          const message = document.querySelector("textarea").value.trim();
+
+          if (!fullName || !email || !phone || !message) {
+            alert("Please fill in all fields.");
+            event.preventDefault();
+            return;
+          }
+
+          // Basic email validation
+          const emailRegex = /^[^\s@]+@[^\s@]+\.[^\s@]+$/;
+          if (!emailRegex.test(email)) {
+            alert("Please enter a valid email address.");
+            event.preventDefault();
+            return;
+          }
+
+          // Basic phone validation (simple check for digits)
+          const phoneRegex = /^\d{10,15}$/;
+          if (!phoneRegex.test(phone.replace(/\s+/g, ""))) {
+            alert("Please enter a valid phone number (10-15 digits).");
+            event.preventDefault();
+            return;
+          }
+
+          alert(
+            "Message sent successfully! (This is a demo - in a real app, data would be sent to server)"
+          );
+          // event.preventDefault(); // Uncomment to prevent actual submit for demo
+        });
+    </script>
   </body>
 </html>
