--- a/login.html
+++ b/login.html
@@ -1,29 +1,58 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Login | OnyXLuxe Tickets</title>
-    <link rel="stylesheet" href="login.css">
-</head>
-<body>
-    <div class="login-box">
-        <h1>Login</h1>
-        <h4>Welcome back! Please sign in.</h4>
-        <form>
-            <label>Email</label>
-            <input type="email" placeholder="Enter your email" required>
-            <label>Password</label>
-            <input type="password" placeholder="Enter your password" required>
-            <input type="submit" value="Login">
+    <link
+      href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="login.css" />
+  </head>
+  <body>
+    <main class="wrapper">
+      <div class="auth-card">
+        <header class="form-header">
+          <h1>Login</h1>
+          <p>Welcome back! Please sign in.</p>
+        </header>
+
+        <form class="login-form" novalidate>
+          <div class="input-group">
+            <label for="email">Email</label>
+            <input type="email" id="email" placeholder="Enter your email" />
+          </div>
+          <div class="input-group">
+            <label for="password">Password</label>
+            <input
+              type="password"
+              id="password"
+              placeholder="Enter your password"
+            />
+          </div>
+          <button type="submit" class="btn-primary">Login</button>
         </form>
-        <p>
+
+        <footer class="form-footer">
+          <p>
             <a href="#">Forgot your password?</a>
-        </p>
-        <p class="para-2">
+          </p>
+          <p>
             Don't have an account? <a href="Signup.html">Sign up here</a>
-                <a href="index.html">continue as guest</a>
-        </p>
-    </div>
-</body>
+            <a href="index.html">continue as guest</a>
+          </p>
+        </footer>
+      </div>
+    </main>
+    <script>
+      document
+        .querySelector(".login-form")
+        .addEventListener("submit", function (event) {
+          // For testing, just redirect to main page
+          window.location.href = "index.html";
+          event.preventDefault();
+        });
+    </script>
+  </body>
 </html>
