--- a/Signup.html
+++ b/Signup.html
@@ -14,6 +14,7 @@
     <main class="wrapper">
       <div class="auth-card">
         <header class="form-header">
+          <h2>ONYXLUXE</h2>
           <h1>Create an account</h1>
           <p>Welcome! Please enter your details.</p>
         </header>
