--- a/login.html
+++ b/login.html
@@ -14,6 +14,7 @@
     <main class="wrapper">
       <div class="auth-card">
         <header class="form-header">
+          <h2>ONYXLUXE</h2>
           <h1>Login</h1>
           <p>Welcome back! Please sign in.</p>
         </header>
