--- a/Signup.html
+++ b/Signup.html
@@ -3,7 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Sign Up - Welcome</title>
+    <meta
+      name="description"
+      content="Sign up for OnyXLuxe Tickets - Create your account to start booking event tickets."
+    />
+    <title>Sign Up - OnyXLuxe Tickets</title>
     <link
       href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
       rel="stylesheet"
