--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="OnyXLuxe Tickets - Your premier destination for event tickets. Discover and purchase tickets for concerts, shows, and more."
+    />
     <title>OnyXLuxe Tickets</title>
     <link rel="stylesheet" href="Homepage.css" />
     <link
@@ -21,6 +25,7 @@
         <a href="index.html" class="active">HOME</a>
         <a href="#target">TICKETS</a>
         <a href="contact.html">CONTACTS</a>
+        <a href="login.html">LOGOUT</a>
       </div>
     </div>
 
