--- a/login.html
+++ b/login.html
@@ -3,7 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Login | OnyXLuxe Tickets</title>
+    <meta
+      name="description"
+      content="Login to OnyXLuxe Tickets - Access your account to manage bookings and preferences."
+    />
+    <title>Login - OnyXLuxe Tickets</title>
     <link
       href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
       rel="stylesheet"
